@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members

title EstoquePro - Diagrama de Classes do Domínio

class User <<Django Auth>> {
  +id: BigInt
  +username: String
  +password: String
  +is_superuser: Boolean
}

class PerfilUsuario {
  +id: BigInt
  +tipo: TipoPerfil
}

class Fornecedor {
  +id: BigInt
  +nome: String
  +contato: String
  +cidade: String
  +criado_em: DateTime
}

class Produto {
  +id: BigInt
  +nome: String
  +categoria: CategoriaProduto
  +subcategoria: SubcategoriaProduto
  +marca: String
  +sku: String
  +preco_custo: Decimal?
  +preco_venda: Decimal
  +estoque_minimo: Integer
  +criado_em: DateTime
  +estoque_total(): Integer
  +estoque_baixo(): Boolean
}

class Variacao {
  +id: BigInt
  +cor: String?
  +tamanho: String?
  +numeracao: String?
  +saldo_atual: Integer
  +criado_em: DateTime
}

class Movimentacao {
  +id: BigInt
  +tipo: TipoMovimentacao
  +quantidade: Integer
  +observacao: Text?
  +data_referencia: Date
  +data: DateTime
}

class PedidoVenda {
  +id: BigInt
  +cliente_nome: String
  +status: StatusPedido
  +criado_em: DateTime
  +atualizado_em: DateTime
  +codigo(): String
  +valor_total(): Decimal
}

class PedidoVendaItem {
  +id: BigInt
  +quantidade: Integer
  +preco_unitario: Decimal
  +subtotal(): Decimal
}

enum TipoPerfil {
  admin
  funcionario
}

enum CategoriaProduto {
  roupa
  calcado
  acessorio
  perfumaria
  geral
}

enum SubcategoriaProduto {
  camisa
  calca
  bermuda
  tenis
  cinto
  bijuteria
  perfume
  geral
}

enum TipoMovimentacao {
  entrada
  saida
}

enum StatusPedido {
  finalizado
}

User "1" -- "0..1" PerfilUsuario : possui >
User "1" <-- "0..*" Movimentacao : responsavel
User "1" <-- "0..*" PedidoVenda : criado_por

Fornecedor "1" <-- "0..*" Produto : fornecedor
Fornecedor "1" <-- "0..*" Movimentacao : origem da entrada

Produto "1" *-- "0..*" Variacao : possui
Variacao "1" *-- "0..*" Movimentacao : gera

PedidoVenda "1" *-- "1..*" PedidoVendaItem : contem
Variacao "1" <-- "0..*" PedidoVendaItem : referencia
Movimentacao "1" <-- "0..*" PedidoVendaItem : movimentacao_saida

PerfilUsuario ..> TipoPerfil
Produto ..> CategoriaProduto
Produto ..> SubcategoriaProduto
Movimentacao ..> TipoMovimentacao
PedidoVenda ..> StatusPedido

note bottom of Produto
  O estoque total do produto é
  derivado da soma do saldo das
  suas variações.
end note

note right of Variacao
  Tamanho e numeração dependem
  da subcategoria do produto.
end note

note right of Movimentacao
  Entradas podem registrar
  fornecedor e data de referência.
end note

note right of PedidoVenda
  Ao registrar uma venda, o sistema
  gera saídas automáticas de estoque
  para cada item vendido.
end note

@enduml
